updated for null values when counting